# ORSGraph

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.mcp  README.md  audit_queries.cypher  build.md  chapters.txt  check_vector.cypher  docker-api-entrypoint.sh  docker-compose.yml  docker-crawler-entrypoint.sh  docker-entrypoint.sh  docker-mcp-entrypoint.sh  railpack.json  railway.json
crates/ors-crawler-v0/: Cargo.toml  build.rs  railpack.json  railway.json
crates/ors-crawler-v0/cypher/queries/: create_cites_edges.cypher  hybrid_search.cypher  load_amendments.cypher  load_chapter_toc_entries.cypher  load_corpus_edition_rows.cypher  load_court_rule_chapters.cypher  load_courts.cypher  load_deadlines.cypher  load_defined_terms.cypher  load_exceptions.cypher  load_form_texts.cypher  load_formatting_profiles.cypher  load_identities.cypher  load_jurisdiction_rows.cypher  load_jurisdictions.cypher  load_legal_corpora.cypher  load_legal_semantic_nodes.cypher  load_parser_diagnostics.cypher  load_procedural_requirements.cypher  load_provisions.cypher  load_public_bodies.cypher  load_remedies.cypher  load_reporter_notes.cypher  load_required_notices.cypher  load_reserved_ranges.cypher  load_rule_applicability_edges.cypher  load_rule_publication_entries.cypher  load_rule_supersession_edges.cypher  load_rule_topics.cypher  load_session_laws.cypher  load_source_documents.cypher  load_source_pages.cypher  load_source_toc_entries.cypher  load_supplementary_local_rule_editions.cypher  load_temporal_effects.cypher  load_versions.cypher  materialize_court_rules_registry_edges.cypher  materialize_definition_edges.cypher  materialize_identity_version_edges.cypher  materialize_obligation_edges.cypher  (+2 more)
crates/ors-crawler-v0/src/: artifact_store.rs  authority_taxonomy.rs  chunks.rs  citations.rs  cli.rs  congress_constitution.rs  corpus_release.rs  court_rules_registry_parser.rs  embedding_profiles.rs  embeddings.rs  fetcher.rs  graph_batch.rs  hash.rs  ingest_runner.rs  io_jsonl.rs  lib.rs  local_rule_pdf_parser.rs  main.rs  models.rs  neo4j_loader.rs  neo4j_loader.rs_fragment.txt  oregon_constitution.rs  oregon_leg_odata.rs  ors_dom_parser.rs  qc.rs  qc_full.rs  qc_neo4j.rs  qc_neo4j.rs_fragment.txt  rag.rs  resolver.rs  semantic.rs  source_qc.rs  source_registry.rs  text.rs  utcr_pdf_parser.rs  voyage.rs
crates/ors-crawler-v0/src/connectors/: mod.rs
crates/ors-crawler-v0/tests/: golden_path.rs
crates/orsgraph-api/: Cargo.toml  railpack.json  railway.json
crates/orsgraph-api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/orsgraph-api/src/models/: admin.rs  api.rs  auth_access.rs  casebuilder.rs  home.rs  mod.rs  rules.rs  search.rs
crates/orsgraph-api/src/routes/: admin.rs  analytics.rs  ask.rs  auth_access.rs  authority.rs  casebuilder.rs  graph.rs  health.rs  home.rs  mod.rs  qc.rs  rules.rs  search.rs  sidebar.rs  sources.rs  stats.rs  statutes.rs
crates/orsgraph-api/src/services/: admin.rs  ai_patch.rs  analytics.rs  ast_diff.rs  ast_patch.rs  ast_validation.rs  auth_access.rs  casebuilder.rs  citation_resolver.rs  corpus_release.rs  docx_renderer.rs  embedding.rs  graph_expand.rs  health.rs  home.rs  html_renderer.rs  legal_concepts.rs  legal_hierarchy.rs  markdown_adapter.rs  mod.rs  neo4j.rs  object_store.rs  pdf_renderer.rs  rerank.rs  rule_engine.rs  rules.rs  search.rs  stats.rs  support_linker.rs  vector_search.rs  work_product_ast.rs
crates/orsgraph-api/src/services/casebuilder/: ai_patch.rs  ast_patch.rs  ast_validation.rs  authority.rs  citation_resolver.rs  complaints.rs  documents.rs  docx_renderer.rs  embeddings.rs  graph_projection.rs  html_renderer.rs  ids.rs  indexes.rs  markdown_adapter.rs  markdown_graph.rs  (+14 more)
crates/orsgraph-api/tests/: graph_contract.rs  search_golden_contract.rs
crates/orsgraph-mcp/: Cargo.toml
crates/orsgraph-mcp/src/: lib.rs  main.rs  streamable_http.rs
crates/orsgraph-mcp/tests/: http_integration.rs  stdio_integration.rs
(+527 files in other folders)
