[package]
name = "ors-crawler-v0"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ors-crawler"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
encoding_rs = "0.8"
futures = "0.3"
hf-hub = "0.3"
html-escape = "0.2"
hex = "0.4"
once_cell = "1.19"
regex = "1.10"
neo4rs = "0.8.0"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "rustls"] }
scraper = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tokenizers = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
rand = "0.8"
