[package]
name = "orsgraph-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
neo4rs = "0.8.0"
config = "0.14"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.11"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-types = "1"
bytes = "1"
