[package]
name = "orsgraph-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2"
neo4rs = "0.8.0"
config = "0.15"
regex = "1.10"
flate2 = "1.1"
reqwest = { version = "0.13", features = ["json", "query"] }
sha2 = "0.11"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
percent-encoding = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-types = "1"
bytes = "1"
