[package]
name = "orsgraph-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0"
axum = "0.8"
percent-encoding = "2"
reqwest = { version = "0.13", features = ["json", "query"] }
rmcp = { version = "1.6.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["io-std", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
rmcp = { version = "1.6.0", features = ["client"] }
